<resources>
    <string name="permissionGranted">Permission Granted</string>
    <string name="permission_denied_message2">Permission Denied, the app may not work without these permission. Try again.</string>

    <string name="sys_button_cancel">Cancel</string>
    <string name="sys_button_ok">OK</string>
    <string name="sys_menu_settings">Settings</string>
    <string name="sys_name">All Document Viewer</string>
    <string name="sys_share_title">Sending mail...</string>

    <string name="dialog_ascending">Ascending</string>
    <string name="dialog_descending">Descending</string>
    <string name="dialog_create_folder_error">Failed to create folder</string>
    <string name="dialog_file_name">File Name</string>
    <string name="dialog_file_rename_error">Failed to rename file</string>
    <string name="dialog_folder_name">Folder Name</string>
    <string name="dialog_name_error">%s already exists.</string>
    <string name="pg_toolsbar_note">Note</string>


    <string name="app_folder_name">/AllDocumentReader/data</string>
    <string name="shareUsing">Share using</string>


    <string name="loadingFiles">Loading Files…</string>
    <string name="pdfFileCreatedSuccessfully">PDF File Created Successfully</string>
    <string name="saveAsPDF">Save as PDF</string>


    <string name="cancel">Cancel</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="dismiss">Dismiss</string>
    <string name="enter_password">Enter password</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="not_supported">Not supported</string>
    <string name="okay">Okay</string>
    <string name="search">Search&#x2026;</string>
    <string name="searching_">Searching&#x2026;</string>
    <string name="text_not_found">Text not found</string>

    <string name="page_no_text_office">Page number</string>
    <string name="toast_current_pg_1">There are currently</string>
    <string name="toast_current_pg_2">Pages</string>

    <string name="toast_delete_success_office">Deleted successfully</string>
    <string name="toast_file_name_not_valid_office">File name is not valid</string>
    <string name="toast_name_already_exist">Name already exists</string>
    <string name="toast_file_rename_successfully_office">Document renamed successfully</string>
    <string name="more_dialog_rename_office">Rename</string>
    <string name="more_dialog_bookmark_office">Bookmark</string>
    <string name="more_dialog_go_to_page_office">Go to page</string>
    <string name="more_dialog_create_shortcut_office">Create Shortcut</string>
    <string name="more_dialog_convert_to_pdf_office">Convert to PDF</string>
    <string name="more_dialog_share_office">Share</string>
    <string name="more_dialog_print_office">Print</string>
    <string name="more_dialog_delete_office">Delete</string>
    <string name="details_dialog_details_office">Details</string>
    <string name="details_dialog_file_name_office">File name</string>
    <string name="details_dialog_storage_location_office">Storage Location</string>
    <string name="details_dialog_last_modified_office">Last Modified</string>
    <string name="details_dialog_file_size_office">File size</string>
    <string name="rename_dialog_ok_office">OK</string>
    <string name="rename_dialog_done_office">Done</string>
    <string name="rename_dialog_hint_office">Filename</string>
    <string name="delete_dialog_delete_title_office">Delete</string>
    <string name="delete_dialog_sub_title_office">Are you sure, you want to delete this file?</string>
    <string name="delete_dialog_done_office">Done</string>
    <string name="processing_dialog_title_office">Processing</string>
    <string name="processing_dialog_sub_title_office">Deleting files to phone, please wait...</string>
    <string name="go_to_page_title_office">Go to page</string>
    <string name="processing_print_office">File is going to ready to print, please wait...</string>

    <string name="save_dialog_title_office" formatted="false">Save Document</string>
    <string name="save_dialog_hint_office" formatted="false">Name</string>
    <string name="converstion_dialog_process_office">Conversion in progress, please wait a few minutes...</string>
    <string name="converstion_dialog_success_office">Success!</string>
    <string name="toast_file_conversion_complete">File conversion Complete</string>
    <string name="toast_shortcut_exist">Shortcut already exist</string>
    <string name="toast_shortcut_launcher_not_support">Shortcut is not supported by your launcher</string>

    <string name="failed_toast_office">Failed</string>

    <string name="toast_shortcut_create" translatable="false">Create Shortcut Successfully</string>

    <string name="convert_to_pdf_hint" translatable="false">Filename</string>

</resources>