<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/detail_img"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:background="@drawable/icons_bg_office"
        android:src="@drawable/ic_detail_more"
        app:tint="#1877f2"
        android:padding="7dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/detail_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:text="@string/details_dialog_details_office"
        android:textAlignment="textStart"
        android:textColor="#001b36"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"
        app:layout_constraintStart_toEndOf="@id/detail_img"
        app:layout_constraintTop_toTopOf="@id/detail_img"
        app:layout_constraintBottom_toBottomOf="@id/detail_img"/>

    <TextView
        android:id="@+id/file_name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_dialog_file_name_office"
        android:textColor="#323a47"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/detail_img"
        app:layout_constraintTop_toBottomOf="@id/detail_img"/>

    <TextView
        android:id="@+id/file_name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="The Godfather.pdf"
        android:textColor="#7b7b7b"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/detail_img"
        app:layout_constraintTop_toBottomOf="@id/file_name_heading"/>

    <TextView
        android:id="@+id/location_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_dialog_storage_location_office"
        android:textColor="#323a47"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/detail_img"
        app:layout_constraintTop_toBottomOf="@id/file_name_value"/>

    <TextView
        android:id="@+id/location_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="/storage/emulated/0/.Documents/Doc lens/The Godfather.pdf"
        android:textColor="#7b7b7b"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintStart_toStartOf="@id/detail_img"
        app:layout_constraintTop_toBottomOf="@id/location_heading"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/date_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_dialog_last_modified_office"
        android:textColor="#323a47"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/detail_img"
        app:layout_constraintTop_toBottomOf="@id/location_value"/>

    <TextView
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dec 31,2020"
        android:textColor="#7b7b7b"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/detail_img"
        app:layout_constraintTop_toBottomOf="@id/date_heading"/>

    <TextView
        android:id="@+id/size_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_dialog_file_size_office"
        android:textColor="#323a47"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/detail_img"
        app:layout_constraintTop_toBottomOf="@id/date_value"/>

    <TextView
        android:id="@+id/size_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="225KB"
        android:textColor="#7b7b7b"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/detail_img"
        app:layout_constraintTop_toBottomOf="@id/size_heading"/>

    <TextView
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/done_btn_office"
        android:fontFamily="@font/roboto_medium"
        android:paddingVertical="9dp"
        android:text="@string/rename_dialog_ok_office"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_value" />

</androidx.constraintlayout.widget.ConstraintLayout>