<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp">

    <ImageView
        android:id="@+id/rename_img"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:background="@drawable/icons_bg_office"
        android:src="@drawable/ic_icon_go_to_page_office"
        android:padding="7dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/delete_txts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:textAppearance="@style/TextAppearance.FontPath.Medium"
        android:text="@string/more_dialog_go_to_page_office"
        android:textAlignment="textStart"
        android:textColor="#001b36"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"
        app:layout_constraintStart_toEndOf="@id/rename_img"
        app:layout_constraintTop_toTopOf="@id/rename_img"
        app:layout_constraintBottom_toBottomOf="@id/rename_img"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_modify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_txts"
        android:paddingTop="10dp"
        android:paddingBottom="7.3dp"
        android:layout_marginTop="26dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_modify_view"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:hint="Page number (1-2)"
            android:text=""
            android:textCursorDrawable="@drawable/color_cursor_office"
            android:textColorHighlight="#401877f2"
            android:maxLines="1"
            android:singleLine="true"
            android:maxLength="25"
            android:background="@android:color/transparent"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:textColor="#1f1f1f"
            android:textSize="16sp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/cross_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="5dp"
            android:layout_marginEnd="9dp"
            android:layout_marginTop="11.3dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_cross_2_office"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/underline"
            app:tint="#909cbb" />

        <ImageView
            android:id="@+id/underline"
            android:layout_width="0dp"
            android:layout_height="0.7dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/done_btn_office"
            app:layout_constraintEnd_toEndOf="@+id/edit_modify_view"
            app:layout_constraintStart_toStartOf="@+id/edit_modify_view"
            app:layout_constraintTop_toBottomOf="@+id/edit_modify_view"
            app:tint="#909cbb" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_modify">

        <TextView
            android:id="@+id/cancel_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/border_bg_office"
            android:fontFamily="@font/roboto_medium"
            android:paddingTop="11.3dp"
            android:paddingBottom="11.3dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rename_modify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rename_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/done_btn_office"
            android:fontFamily="@font/roboto_medium"
            android:paddingTop="11.3dp"
            android:paddingBottom="11.3dp"
            android:text="@string/rename_dialog_done_office"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_modify"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>